VHCS 2.4.8 ω Omega Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:                                                          \
|        - FastCGI:                                               |
|               * Copy files on update                            |
|               * apache: check if stats are working with FastCGI |
|               * Finish fastcgi.conf file                        |
|                                                                 |
|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-02-12 Benedikt Heintel
	- CONFIGS:
		* added folder and files for Gentoo
		* added Fedora files missing / changed
		* changed masters php.inis
	- DOCS:
		* added folder for Gentoo
	- GUI:
		* fixed small bug
	- LANGUAGES:
		* Portugues-Brazil: added missing strings
	- SETUP:
		* changed permissions
		* fixed bug #48

2007-02-11 Benedikt Heintel
	- GUI:
		* changed Errordocs (untested)
		* fixed bug #71
	 - SETUP:
	 	* updated initial English language

2007-02-10 Benedikt Heintel
	- LANGUAGES:
		* changed and deleted unused / wrong strings

2007-02-09 Laurent DECLERCQ
	- CONFIGS:
		* Edit "php.ini" files for master user:
			- open_basedir: added "bind/df" and "/bind/mount" path for GUI System Info
			- open_basedir: added "/var/log/rkhunter.log" path for Gui Rootkit
			- disable_functions: remove "popen" function for GUI system Info

2007-02-08 Benedikt Heintel
	- LANGUAGES:
		* Spanish: added missing language strings
	- GUI:
		* changed behavior of string translation and added optional javascript variable
	- SETUP:
		* modified Makefiles

2007-02-08 Laurent DECLERCQ
	- ENGINE:
		* Fixed bug #48 :
			=> Edit "vhcs2-dmn-mngr
				- Instructions disabled for Master user
