@@ -14,9 +14,9 @@ a.link:visited {color:#000099; text-decoration:underline; font-weight:normal}
 a.link:hover {color:#000000; text-decoration: none;}
 a.link:active {color:#000000;text-decoration:none;}
 
-	
+
 a.menu {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: arial, helvetica, sans-serif;
 	font-size: 9pt;
 	color: #000;
 	font-weight: bold;
@@ -24,25 +24,25 @@ a.menu {
 }
 a.menu:link {
 	color: #000000;
-	TEXT-DECORATION: none;
+	text-decoration: none;
 }
 a.menu:visited {
-	color: #000000; 
-	TEXT-DECORATION: none;
+	color: #000000;
+	text-decoration: none;
 }
 a.menu:hover {
 	color: #333333;
-	TEXT-DECORATION: none;
+	text-decoration: none;
 }
 a.menu:active {
 	color: #333333;
-	TEXT-DECORATION: none;
+	text-decoration: none;
 }
 
 /*  menu active begin */
 
 a.menu_active {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: arial, helvetica, sans-serif;
 	font-size: 9pt;
 	color: #000000;
 	font-weight: bold;
@@ -50,19 +50,19 @@ a.menu_active {
 }
 a.menu_active:link {
 	color: #000;
-	TEXT-DECORATION: none;
+	text-decoration: none;
 }
 a.menu_active:visited {
-	color: #000; 
-	TEXT-DECORATION: none;
+	color: #000;
+	text-decoration: none;
 }
 a.menu_active:hover {
 	color: #333333;
-	TEXT-DECORATION: none;
+	text-decoration: none;
 }
 a.menu_active:active {
 	color: #333333;
-	TEXT-DECORATION: none;
+	text-decoration: none;
 }
 
 /*  menu active end*/
@@ -72,9 +72,9 @@ a.menu_active:active {
 /*  submenu begin */
 
 a.submenu {
-	MARGIN-TOP: 0px;
-	DISPLAY: block;
-	font-family:Geneva, Arial, Helvetica, sans-serif;
+	margin-top: 0px;
+	display: block;
+	font-family:geneva, arial, helvetica, sans-serif;
 	font-weight:bold;
 	font-size: 11px;
 	vertical-align: middle;
@@ -94,7 +94,7 @@ a.submenu:link {
 a.submenu:visited {
 	color: #ffffff;
 	background-image: url(../images/top/link_bg.jpg);
-	vertical-align: middle; 
+	vertical-align: middle;
 }
 a.submenu:hover {
 	color: #f4dc6b;
@@ -118,7 +118,7 @@ a.submenu:focus {
 /*  submenu begin */
 
 a.logout {
-	font-family:Geneva, Arial, Helvetica, sans-serif;
+	font-family:geneva, arial, helvetica, sans-serif;
 	font-weight:bold;
 	font-size: 10px;
 	color: #ffffff;
@@ -132,7 +132,7 @@ a.logout:link {
 	color: #ffffff;
 }
 a.logout:visited {
-	color: #ffffff; 
+	color: #ffffff;
 }
 a.logout:hover {
 	color: #f4dc6b;
@@ -147,32 +147,32 @@ a.logout:active {
 /*  submenu end*/
 
 .title {
-	font-family: Geneva, Arial, Helvetica, sans-serif;
+	font-family: geneva, arial, helvetica, sans-serif;
 	font-size: 11pt;
 	font-weight: bold;
 	font-variant:small-caps;
 	text-decoration: none;
-	border-bottom:#CCCCCC solid 1px;
+	border-bottom:#cccccc solid 1px;
 }
 
 .titlemenu {
-	font-family:  Geneva, Arial, Helvetica, sans-serif;
+	font-family:  geneva, arial, helvetica, sans-serif;
 	font-size: 11pt;
 	font-weight:bold;
 	font-variant:small-caps;
-	color:#FFFFFF;
+	color:#ffffff;
 	padding-left:5px;
 	vertical-align:text-top;
-}	
+}
 
 .bottom {
-	color: #FFFFFF;
-	font-family: Arial, Helvetica, sans-serif;
+	color: #ffffff;
+	font-family: arial, helvetica, sans-serif;
 	font-size: 7pt;
 	background-image: url(../images/top/menu_bg.jpg);
 }
 td {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: arial, helvetica, sans-serif;
 	font-size: 12px;
 }
 
@@ -221,8 +221,8 @@ td.content4 {
   background-color: white;
   border-style: solid;
   border-width: 1;
-  border-color: #CCCCCC;
-  font-family: Verdana;
+  border-color: #cccccc;
+  font-family: verdana;
   font-size: 8pt;
   height: 21px;
   margin: 2px;
@@ -233,15 +233,15 @@ td.content4 {
   background-color: white;
   border-style: solid;
   border-width: 1;
-  border-color: #CCCCCC;
-  font-family: Verdana;
+  border-color: #cccccc;
+  font-family: verdana;
   font-size: 8pt;
   margin: 2px;
 }
 
 .button
 {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: arial, helvetica, sans-serif;
 	height: 21px;
 	font-size: 12px;
 	color: #000000;
@@ -250,7 +250,7 @@ td.content4 {
 }
 .login_button
 {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: arial, helvetica, sans-serif;
 	height: 21px;
 	font-size: 12px;
 	color: #ffffff;
@@ -259,14 +259,42 @@ td.content4 {
 }
 .login_bottom {
 	font-size: 10px;
-	color: #99A0B1;
+	color: #99a0b1;
 }
 .login_text {
 	color: #334163;
 }
 
 .login_time {
-	color: #99A0B1;
+	color: #99a0b1;
 	font-size: 24px;
 	font-weight: bold;
+}
+
+a.login {
+	font-family: geneva, arial, helvetica, sans-serif;
+	font-size: 11px;
+	color: #3b73ca;
+	white-space: nowrap;
+	text-decoration: underline;
+}
+
+a.login:link {
+	color: #3b73ca;
+	text-decoration: underline;
+}
+
+a.login:visited {
+	color: #3b73ca;
+	text-decoration: underline;
+}
+
+a.login:hover {
+	color: #000000;
+	text-decoration: none;
+}
+
+a.login:active {
+	color: #000000;
+	text-decoration: none;
 }
