@@ -20,7 +20,7 @@
     <td colspan="7" width="453" height="69" background="{THEME_COLOR_PATH}/images/login/login_top.jpg">&nbsp;</td>
   </tr>
   <tr>
-    <td colspan="7"><div align="center"><font size="-2">Please enter your login information</font></div></td>
+    <td colspan="7"><div align="center"><font size="-2">{TR_LOGIN_INFO}</font></div></td>
     </tr>
   <tr>
     <td width="19">&nbsp;</td>
